--- a/asg0.html
+++ b/asg0.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <title>Draw a blue rectangle (canvas version)</title>
-        <script src="L:\CSE 160\lib\cuon-matrix-cse160.js"></script>    
+        <script src="lib\cuon-matrix-cse160.js"></script>    
         <script src="asg0.js"></script>
     </head>
     <body onload="main()">
